Release history for MetaPOD

{{$NEXT}}
 - Bugfix: update tooling avoids -Ddefault_inc_excludes_dot issues

 [Dependencies::Stats]
 - Dependencies changed since 0.3.6, see misc/*.deps* for details
 - build: ↑1
 - configure: +1 ↑1
 - develop: +12 ↑3 -3 (suggests: +2 -1)
 - test: +2 ↑1 -2 (recommends: ↑1 -1)

0.3.6 2014-01-23T11:35:46Z
 [00 Minor]
 - Tooling/Documentation minor adjustments.

 [Dependencies::Stats]
 - Dependencies changed since 0.3.5, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +6 ↑1 -7
 - runtime: +1 ↑1
 - test: +3 (recommends: +2)

0.3.5 2013-11-24T10:37:17Z
 [00 Further Forking]
 - MetaPOD::Spec and MetaPOD::JSON are no longer part of the core MetaPOD distribution.
 - MetaPOD will be purely functional code.

 [Dependencies::Stats]
 - Dependencies changed since 0.3.0, see misc/*.deps* for details
 - develop: ↑1

0.3.0 2013-11-23T06:39:27Z
 [00 FORK]
 - MetaPOD::Format::JSON is now shipped seperately.
 - This is to trend towards making defining the Spec and the Implementation independently.

 [Dependencies::Noteworthy]
 - Upgrade Module::Build
 - Upgrade Test::More
 - JSON specific things dropped
 - Try::Tiny no longer a core dep
 - use Test::Requires
 - Perl Minimum lowered.

 [Dependencies::Stats]
 - Dependencies changed since 0.2.4, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +43 ↑1 -1 (recommends: -1, suggests: +1 -1)
 - runtime: ↓1 -2
 - test: +1 ↑1 -3

 [Documentation]
 - Changes file now simplified.

 [Packaging]
 - use newish fallback_build_requires in Build.PL

 [Tests]
 - use Test::Compile::PerFile
 - ReportVersions::Tiny updated not to report Develop Deps

0.2.4 2013-09-26T06:34:05Z
 [00 Minor]
 - Bump to provide regenerated Test::Compile not known-broken on win32

 [Dependencies::Stats]
 - Dependencies changed since 0.2.3, see misc/*.deps* for details
 - test: +1

0.2.3 2013-08-31T03:01:20Z
 [!Minor]
 - Bump to excise old Test::Compile test.

 [Dependencies::Stats]