@@ -49,6 +49,8 @@ include_dotfiles = 1
 
 [Manifest / @Author::KENTNL/Manifest]
 
+[Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
+
 [MetaTests / @Author::KENTNL/MetaTests]
 
 [PodCoverageTests / @Author::KENTNL/PodCoverageTests]
@@ -81,7 +83,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.022005
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.023003
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -149,6 +151,17 @@ url_shortener = none
 modules = Module::Build
 modules = Test::More
 
+[Prereqs::Upgrade / @Author::KENTNL/Prereqs::Upgrade]
+Dist::Zila::Plugin::MetaProvides::Package = 2.000000
+Dist::Zilla = 5
+File::ShareDir::Install = 0.10
+Module::Build = 0.4004
+Moo = 1.000008
+Moose = 2.000
+Path::Tiny = 0.058
+Test::File::ShareDir = 1.000000
+Test::More = 0.99
+
 [Prereqs::Recommend::MatchInstalled / @Author::KENTNL/always_latest_develop_bundle]
 applyto_map = develop.suggests = develop.suggests
 applyto_phase = develop
@@ -168,6 +181,7 @@ modules = Dist::Zilla::App::Command::bakeini
 -phase = develop
 -relationship = requires
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
@@ -199,6 +213,7 @@ Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
+Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
