@@ -7,8 +7,9 @@ Release history for MetaPOD
  - Dependencies changed since 0.3.6, see misc/*.deps* for details
  - build: ↑1
  - configure: +1 ↑1
- - develop: +12 ↑3 -3 (suggests: +2 -1)
- - test: +2 ↑1 -2 (recommends: ↑1 -1)
+ - develop: +14 ↑3 -3 (suggests: +2 -1)
+ - runtime: (recommends: +1)
+ - test: +2 ↑1 -2 (recommends: +1 ↑1 -1)
 
 0.3.6 2014-01-23T11:35:46Z
  [00 Minor]
